@@ -207,10 +207,10 @@ module ActiveMerchant #:nodoc:
       end
 
       def add_connected_account(post, options = {})
-        return unless transfer_data = options[:transfer_data]
+        return unless options[:transfer_destination]
         post[:transfer_data] = {}
-        post[:transfer_data][:destination] = transfer_data[:destination] if transfer_data[:destination]
-        post[:transfer_data][:amount] = transfer_data[:amount] if transfer_data[:amount]
+        post[:transfer_data][:destination] = options[:transfer_destination]
+        post[:transfer_data][:amount] = options[:transfer_amount] if options[:transfer_amount]
         post[:on_behalf_of] = options[:on_behalf_of] if options[:on_behalf_of]
         post[:transfer_group] = options[:transfer_group] if options[:transfer_group]
         post[:application_fee_amount] = options[:application_fee] if options[:application_fee]
